Bg-hand position IE fix

--- a/source/sass/components/_intro.scss
+++ b/source/sass/components/_intro.scss
@@ -209,7 +209,7 @@
     width: 960px;
     min-height: 860px;
     background-image: url("../img/iphone-hand-desktop@1x.png");
-    background-position: 23px 211px;
+    background-position: 23px 199px;
     background-size: 1053px auto;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
